--- a/Prime video.html
+++ b/Prime video.html
@@ -6,7 +6,7 @@
     <title>Welcome to prime video</title>
     <!-- font awesome cdn -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-    <link rel="stylesheet" href="./style2.css">
+    <link rel="stylesheet" href="./Prime vis.css">
 </head>
 <body>
 
